--- a/src/pages/auth/Login/login.css
+++ b/src/pages/auth/Login/login.css
@@ -4,3 +4,6 @@
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 500;
 }
+/* .centreForm {
+  padding-left: 20px;
+} */
